# App42_Cocos2DX_SDK

./: .gitmodules  Android.mk  CMakeLists.txt  Change Log.md  README.md
App42Cocos2dXSample/: README.md
App42Cocos2dXSample/App42/Common/: App42API.h
App42Cocos2dXSample/App42/Crypto/: HMAC_SHA1.cpp  HMAC_SHA1.h  urlencode.cpp
App42Cocos2dXSample/App42/GameService/: App42RewardResponse.cpp  GameService.cpp
App42Cocos2dXSample/App42/TimerService/: TimerService.cpp
App42Cocos2dXSample/Classes/: AppDelegate.cpp  ResponseScene.cpp  ResponseScene.h
App42Cocos2dXSample/Resources/: data.txt
App42Cocos2dXSample/Tests/: TestAvatarService.cpp  TestBuddyService.cpp  TestBuddyService.h  TestCustomCodeService.cpp  TestCustomCodeService.h  TestEmailService.cpp  TestEmailService.h  TestEventService.cpp  TestEventService.h  TestGameService.cpp  TestGeoService.cpp  TestGeoService.h  TestHome.cpp  TestHome.h  TestPushNotificationService.cpp  TestPushNotificationService.h  TestRewardService.cpp  TestRewardService.h  TestScoreboardService.cpp  TestScoreboardService.h  TestSessionService.cpp  TestSessionService.h  TestSocialService.cpp  TestSocialService.h  TestStorageService.cpp  TestStorageService.h  TestTimerService.cpp  TestUploadService.cpp  TestUploadService.h  TestUserService.cpp  TestUserService.h
App42Cocos2dXSample/proj.android/: .cproject  .project  build.xml
App42Cocos2dXSample/proj.win32/: App42Test.sln  App42Test.vcxproj  App42Test.vcxproj.filters
App42Cocos2dXSample/proj.wp8-xaml/: App42Cocos2dXSample.sln
App42Cocos2dxSample/Classes/: AppDelegate.cpp  ResponseScene.cpp
App42Cocos2dxSample/Resources/: upload.json
App42Cocos2dxSample/Tests/: TestAvatarService.cpp  TestAvatarService.h  TestBuddyService.cpp  TestBuddyService.h  TestEmailService.cpp  TestGameService.cpp  TestGameService.h  TestGeoService.cpp  TestHome.cpp  TestHome.h  TestPushNotificationService.cpp  TestPushNotificationService.h  TestRewardService.cpp  TestScoreboardService.cpp  TestSessionService.cpp  TestSocialService.cpp  TestStorageService.cpp  TestTimerService.cpp  TestTimerService.h  TestUploadService.cpp  TestUserService.cpp  TestUserService.h
App42Cocos2dxSample/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
App42Cocos2dxSample/proj.android-studio/: settings.gradle
App42Cocos2dxSample/proj.win10/: App42Cocos2dxSample.sln
App42Cocos2dxSample/proj.win32/: App42Cocos2dxSample.sln
App42Cocos2dxSample/proj.win8.1-universal/: App42Cocos2dxSample.sln
App42SDK/Common/: App42API.cpp  App42API.h  App42Constants.h  App42Response.h  App42Service.cpp
App42SDK/Crypto/: base64.cpp
App42SDK/GameService/: App42GameResponse.cpp  RewardService.h  ScoreBoardService.cpp  ScoreService.cpp
App42SDK/PushNotificationService/: PushNotificationService.cpp
App42SDK/StorageService/: App42StorageResponse.h  StorageService.cpp  StorageService.h
App42SDK/UserService/: App42UserResponse.cpp  App42UserResponse.h  UserService.cpp  UserService.h
App42SDK/Util/: BodyBuilder.h  Common.h  Connector.h
App42_Cocos2DX_Sample/: README.md
App42_Cocos2DX_Sample/App42CPPSDK/: Prefix.pch
App42_Cocos2DX_Sample/App42CPPSDK.xcodeproj/: project.pbxproj
App42_Cocos2DX_Sample/App42CPPSDK/libs/chipmunk/: CMakeLists.txt
App42_Cocos2DX_Sample/App42CPPSDK/libs/chipmunk/src/: CMakeLists.txt
App42_Cocos2dX_SDK/Common/: App42API.cpp  App42Response.cpp  App42Response.h  App42Service.cpp  App42Service.h
App42_Cocos2dX_SDK/GameService/: App42GameResponse.cpp  App42GameResponse.h  App42RewardResponse.cpp  GameService.cpp  GameService.h  RewardService.cpp  RewardService.h  ScoreBoardService.cpp  ScoreBoardService.h  ScoreService.cpp  ScoreService.h
App42_Cocos2dX_SDK/PushNotificationService/: App42PushNotificationResponse.cpp  App42PushNotificationResponse.h  PushNotificationService.cpp  PushNotificationService.h
App42_Cocos2dX_SDK/StorageService/: App42StorageResponse.cpp  App42StorageResponse.h  Query.cpp  QueryBuilder.cpp  StorageService.cpp  StorageService.h
App42_Cocos2dX_SDK/UserService/: UserService.cpp
App42_Cocos2dX_SDK/Util/: Connector.h  Exceptions.h  Signing.h
V_1.4/App42_Cocos2dX_SDK/: CMakeLists.txt
V_1.5/App42_Cocos2dX_SDK/: CMakeLists.txt
V_1.6/App42_Cocos2dX_SDK/: CMakeLists.txt
(+582 files in other folders)
